crates/pixi-build-python/src/snapshots/pixi_build_python__python__tests__noarch_python.snap
---
source: crates/pixi-build-python/src/python.rs
expression: "recipe(r#\"\n        [workspace]\n        platforms = []\n        channels = []\n        preview = [\"pixi-build\"]\n\n        [package]\n        name = \"foobar\"\n        version = \"0.1.0\"\n\n        [package.build]\n        backend = { name = \"pixi-build-python\", version = \"*\" }\n        \"#,\nPythonBackendConfig::default())"
---
schema_version: 1
context: {}
package:
  name: foobar
  version: 0.1.0
source:
  - path: "[ ... path ... ]"
build:
  number: 0
  string: pyhbf21a9e_0
  script: "[ ... script ... ]"
  noarch: python
requirements:
  host:
    - pip
    - python
