crates/pixi-build-python/src/snapshots/pixi_build_python__python__tests__setting_host_and_build_requirements-2.snap
---
source: crates/pixi-build/src/bin/pixi-build-python/python.rs
expression: recipe.unwrap()
---
schema_version: 1
context: {}
package:
  name: test-reqs
  version: 1.2.3
source:
  - path: "[ ... path ... ]"
build:
  number: 0
  script: "[ ... script ... ]"
  noarch: python
requirements:
  build:
    - boltons
  host:
    - hatchling
    - pip
    - python
  run:
    - foobar >=3.2.1
